Fix dropdown arrow icon not aligning with text

--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -30,7 +30,7 @@
             
             &::before {
                 font-style: normal;
-                font-size: rem(12px);
+                font-size: rem(14px);
             }
         }
 
